# narc

./: .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .gpipe.yml  CHANGELOG.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  narc.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: lint.yml  main.yml  pr.yml  prerelease.yml  push.yml  release.yml  tag.yml  test.yml
cmd/: root.go  run.go  shell.go  shell_windows.go  signals_unix.go  signals_windows.go  version.go
examples/python/: app.py
internal/analyzer/: analyzer.go  analyzer_test.go
internal/catalog/: catalog.go  catalog_test.go
internal/certmgr/: certmgr.go  certmgr_test.go
internal/config/: config.go  config_test.go
internal/output/: output.go  output_test.go
internal/proxy/: proxy.go  proxy_test.go  proxy_testing.go
internal/shellenv/: bash.go  fish.go  omz.go  shellenv.go  shellenv_test.go  zsh.go
